--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,16 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
+            <ul>
+            {% for conference in conferences %}
+                <li><a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a></li>
+            {% endfor %}
+            </ul>
+            <p><a href="{{ path('admin') }}">admin page</a></p>
+            <hr />
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
