--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,14 +16,11 @@
     <body>
         <header>
             <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
-            <ul>
-            {% for conference in conferences %}
-                <li><a href="{{ path('conference', { slug: conference.slug }) }}">{{ conference }}</a></li>
-            {% endfor %}
-            </ul>
+                {{ render_esi(path('conference_header')) }}
             <p><a href="{{ path('admin') }}">admin page</a></p>
             <hr />
         </header>
         {% block body %}{% endblock %}
     </body>
 </html>
+
