--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item mr-3">
                                 <a class="nav-link" href="{{ path('admin') }}">
-                                    Admin
+                                    {{ 'Admin'|trans }}
                                 </a>
                             </li>
 <li class="nav-item dropdown">
